[package]
name = "kallax"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Ben-Wormald/kallax"

[dependencies]
dotenv = "0.15.0"
gpui = { git = "https://github.com/zed-industries/zed" }
id3 = "1.12.0"
image = "0.23"
md5 = "0.7.0"
querystring = "1.1.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rodio = "0.17.3"
turbosql = "0.10.0"
