[package]
name = "kallax"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/Ben-Wormald/kallax"

[package.metadata.bundle]
name = "Kallax"
identifier = "uk.co.benwormald.kallax"
icon = [
  "./assets/128x128.png",
  "./assets/128x128@2x.png",
  "./assets/256x256.png",
  "./assets/256x256@2x.png",
  "./assets/512x512.png",
  "./assets/512x512@2x.png",
]

[dependencies]
dotenv = "0.15.0"
gpui = "0.2.0"
id3 = "1.12.0"
image = "0.25"
md5 = "0.7.0"
objc2 = "0.6"
objc2-avf-audio = "0.3.2"
objc2-foundation = "0.3"
objc2-media-player = "0.3"
querystring = "1.1.0"
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
rodio = "0.20"
turbosql = "0.10.0"
uuid = { version = "1.11.0", features = ["v4"] }
